ensure no horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
 .action-bar {
   background: rgba(179, 229, 252, 1.0);
   position: fixed;
-  top: 0px;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  width: 100%;
   z-index: 1000;
   box-shadow: 1px;
   display: flex;
@@ -45,12 +46,14 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 48px;
+  display: block;
+  text-align: center;
+
 }
 
 .canvas {
   cursor: pointer;
 }
-
 .char-input {
   padding: 0;
   margin:  0;
